# tatar-llm

./: README.md  demo_notebook.ipynb  inference.py  pyproject.toml  task.md  train.py  train_tokenizer.py
